[gd_scene load_steps=11 format=3 uid="uid://dsrenu45eux01"]

[ext_resource type="Script" uid="uid://bomuxq800mnqx" path="res://Entities/Buildings/repair_station.gd" id="1_0d02d"]
[ext_resource type="Texture2D" uid="uid://euxadwrnrf8w" path="res://Assets/Textures/Explosions_Textures/Circle03.png" id="2_0d02d"]

[sub_resource type="BoxMesh" id="BoxMesh_j25o5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_j25o5"]
radius = 11.377139

[sub_resource type="Curve" id="Curve_0d02d"]
_data = [Vector2(0, 0.3146068), 0.0, 0.0, 0, 0, Vector2(0.3407821, 0.8089888), 0.0, 0.0, 0, 0, Vector2(1, 0.57303375), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_qwlfa"]
curve = SubResource("Curve_0d02d")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iaueu"]
emission_shape = 1
emission_sphere_radius = 0.05
direction = Vector3(0, 0, 0)
spread = 0.0
initial_velocity_min = 0.5
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_qwlfa")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_km23h"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.32650194, 0.84893125, 3.080368e-06, 1)
albedo_texture = ExtResource("2_0d02d")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_3av4g"]
material = SubResource("StandardMaterial3D_km23h")

[sub_resource type="BoxShape3D" id="BoxShape3D_0d02d"]

[node name="RepairStation" type="Area3D"]
script = ExtResource("1_0d02d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_j25o5")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7982445, 0)
shape = SubResource("SphereShape3D_j25o5")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.49443483, 0)
layers = 2
amount = 10
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_iaueu")
draw_pass_1 = SubResource("QuadMesh_3av4g")

[node name="GPUParticlesAttractorSphere3D" type="GPUParticlesAttractorSphere3D" parent="GPUParticles3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3225684, 4.434896, 0)
strength = 128.0
attenuation = 0.030185526
cull_mask = 4294966274
radius = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_0d02d")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
